--- a/style.css
+++ b/style.css
@@ -69,23 +69,23 @@ section {
 
 /* Slider */
 .slide-1 {
-    background: url(imagini2/office.jpg) ;
+    background: url(office.jpg) ;
 }
 
 .slide-2 {
-    background: url(imagini2/programarea-este-viata-mea2.jpg);
+    background: url(programarea-este-viata-mea2.jpg);
 }
 
 .slide-3 {
-    background: url(imagini2/hero1.jpg);
+    background: url(hero1.jpg);
 }
 
 .slide-4  {
-    background: url(imagini2/hero2.jpg);
+    background: url(hero2.jpg);
 }
 
 .slide-5 {
-    background: url(imagini2/hero3.jpg);
+    background: url(hero3.jpg);
 }
 
 
@@ -183,7 +183,7 @@ section {
 /* Echipa */
 
 #echipa {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(imagini2/4.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(4.jpg);
 }
 
 
